--- a/deployments/gitea/roles/deploy/tasks/main.yml
+++ b/deployments/gitea/roles/deploy/tasks/main.yml
@@ -1,43 +1,64 @@
 ---
+# This task file is responsible for deploying the Gitea stack using Docker Swarm.
+# It ensures that Docker and docker-compose are installed and running, removes any existing services,
+# sets up the required directory structure, deploys the stack, and cleans up temporary files.
+
 - name: Ensure docker-compose is installed
   ansible.builtin.package:
-    name: docker-compose
-    state: present
+    name: docker-compose  # The package name for docker-compose.
+    state: present  # Ensure docker-compose is installed on the target system.
+  # This task ensures that docker-compose is available for managing Docker-based applications.
 
 - name: Ensure Docker service is running
   ansible.builtin.service:
-    name: docker
-    state: started
-    enabled: true
+    name: docker  # The name of the Docker service.
+    state: started  # Ensure the Docker service is running.
+    enabled: true  # Ensure the Docker service starts on boot.
+  # This task ensures that the Docker daemon is active and ready to manage containers.
 
 - name: Remove service
   docker_swarm_service:
-    name: gitea_server
-    state: absent
-  ignore_errors: true
+    name: gitea_server  # The name of the Docker Swarm service to remove.
+    state: absent  # Ensure the service is removed.
+  ignore_errors: true  # Allow the playbook to continue even if this task fails.
+  # This task removes any existing instance of the Gitea service to avoid conflicts during deployment.
 
 - name: Setup Gitea directory
   ansible.builtin.file:
-    path: /home/docker-compose/gitea
-    state: directory
-    mode: '0755'
-    owner: nobody
-    group: nogroup
+    path: /home/docker-compose/gitea  # The path to the directory to be created.
+    state: directory  # Ensure the path is a directory.
+    mode: '0755'  # Set the directory permissions (read, write, execute for owner; read and execute for others).
+    owner: nobody  # Set the directory owner to `nobody`.
+    group: nogroup  # Set the directory group to `nogroup`.
+  # This task creates the directory structure required for the deployment.
 
 - name: Copy compose from template to host
   ansible.builtin.template:
-    src: "templates/docker-compose.yml"
-    dest: "/home/docker-compose/gitea/docker-compose.yaml"
-    mode: '0755'
-    owner: nobody
-    group: nogroup
+    src: "templates/docker-compose.yml"  # Path to the Jinja2 template for the docker-compose file.
+    dest: "/home/docker-compose/gitea/docker-compose.yaml"  # Destination path for the docker-compose file.
+    mode: '0755'  # Set the file permissions (read, write, execute for owner; read and execute for others).
+    owner: nobody  # Set the file owner to `nobody`.
+    group: nogroup  # Set the file group to `nogroup`.
+  # This task copies the docker-compose template to the target system, ensuring it is ready for deployment.
 
 - name: Deploy Gitea stack
   ansible.builtin.command:
-    cmd: docker stack deploy -c /home/docker-compose/gitea/docker-compose.yaml gitea 
-  register: swarm_check
-  changed_when: false
+    cmd: docker stack deploy -c /home/docker-compose/gitea/docker-compose.yaml gitea
+    # The `docker stack deploy` command deploys the stack using the specified compose file.
+    # - `-c`: Specifies the path to the docker-compose file.
+    # - `gitea`: The name of the stack to deploy.
+  register: swarm_check  # Store the output of the command in the `swarm_check` variable.
+  changed_when: false  # Ensure this task does not mark the playbook as "changed."
+  # This task deploys the Gitea stack to the Docker Swarm cluster.
 
 - name: delete compose directory
   ansible.builtin.command:
-    cmd: rm -rf /home/docker-compose 
+    cmd: rm -rf /home/docker-compose  # Remove the temporary directory and its contents.
+  # This task cleans up the temporary files and directories created during the deployment process.
+
+# Notes:
+# - Ensure that Docker and Docker Swarm are properly configured on the target system before running this playbook.
+# - The `docker-compose.yml` template should define the services, networks, and volumes required for the Gitea stack.
+# - The cleanup step (`delete compose directory`) is optional and can be removed if the compose files need to be retained.
+# - Use caution when setting permissions (`0755`) and ownership (`nobody:nogroup`) to avoid security risks.
+# - Always test the deployment in a staging environment before applying it to production.
