--- a/deployments/ddns/deploy.yml
+++ b/deployments/ddns/deploy.yml
@@ -1,6 +1,19 @@
 ---
+# This playbook is responsible for deploying the DDNS (Dynamic DNS) stack to the Docker Swarm cluster.
+# It targets the first manager node in the Swarm (`manager[0]`) and uses the `deploy` role to perform the deployment.
+# The `deploy` role ensures that Docker and docker-compose are installed, the required directory structure is created,
+# the stack is deployed, and any temporary files are cleaned up.
+
 - name: Deploy DDNS
-  hosts: manager[0]
-  become: true
+  hosts: manager[0]  # Target the first manager node in the `manager` group.
+  become: true  # Execute tasks with elevated privileges (sudo) to ensure proper permissions.
   roles:
-  - deploy
+  - deploy  # Use the `deploy` role to handle all tasks related to deploying the DDNS stack.
+
+# Notes:
+# - Ensure that the `manager` group is properly defined in the Ansible inventory file, with at least one manager node.
+# - The `deploy` role should include all necessary tasks to prepare the environment, deploy the stack, and clean up.
+# - This playbook assumes that the Docker Swarm cluster is already initialized and functional.
+# - Always test the deployment in a staging environment before applying it to production.
+# - Use `become: true` cautiously and ensure that the user running the playbook has the necessary sudo privileges.
+# - The `deploy` role should be modular and reusable for similar deployments in other environments.
