--- a/deployments/gitea/deploy.yml
+++ b/deployments/gitea/deploy.yml
@@ -1,7 +1,21 @@
 ---
+# This playbook is responsible for deploying the Gitea stack to the Docker Swarm cluster.
+# It performs the following tasks:
+# 1. Ensures that the required NFS directory for Gitea exists and is properly configured.
+# 2. Deploys the Gitea stack using Docker Swarm by leveraging the `deploy` role.
+
 - name: Deploy Gitea
-  hosts: manager[0]
-  become: true
+  hosts: manager[0]  # Target the first manager node in the `manager` group.
+  become: true  # Execute tasks with elevated privileges (sudo) to ensure proper permissions.
   roles:
-  - check_nfs
-  - deploy
+    - check_nfs  # Ensures the required NFS directory for Gitea exists with the correct permissions.
+    - deploy  # Handles the deployment of the Gitea stack, including Docker and docker-compose setup.
+
+# Notes:
+# - Ensure that the `manager` group is properly defined in the Ansible inventory file, with at least one manager node.
+# - The `check_nfs` role should verify and create the necessary NFS directory for Gitea.
+# - The `deploy` role should include all tasks required to prepare the environment, deploy the stack, and clean up temporary files.
+# - This playbook assumes that the Docker Swarm cluster is already initialized and functional.
+# - Always test the deployment in a staging environment before applying it to production.
+# - Use `become: true` cautiously and ensure that the user running the playbook has the necessary sudo privileges.
+# - Modular roles like `check_nfs` and `deploy` improve reusability and maintainability across similar deployments.
