--- a/deployments/home-assistant/deploy.yml
+++ b/deployments/home-assistant/deploy.yml
@@ -1,7 +1,21 @@
 ---
+# This playbook is responsible for deploying the Home Assistant stack to the Docker Swarm cluster.
+# It performs the following tasks:
+# 1. Ensures that the required NFS directory for Home Assistant exists and is properly configured.
+# 2. Deploys the Home Assistant stack using Docker Swarm by leveraging the `deploy_home_assistant` role.
+
 - name: Deploy Home Assistant
-  hosts: manager[0]
-  become: true
+  hosts: manager[0]  # Target the first manager node in the `manager` group.
+  become: true  # Execute tasks with elevated privileges (sudo) to ensure proper permissions.
   roles:
-  - check_nfs
-  - deploy_home_assistant
+    - check_nfs  # Ensures the required NFS directory for Home Assistant exists with the correct permissions.
+    - deploy_home_assistant  # Handles the deployment of the Home Assistant stack, including Docker and docker-compose setup.
+
+# Notes:
+# - Ensure that the `manager` group is properly defined in the Ansible inventory file, with at least one manager node.
+# - The `check_nfs` role should verify and create the necessary NFS directory for Home Assistant.
+# - The `deploy_home_assistant` role should include all tasks required to prepare the environment, deploy the stack, and clean up temporary files.
+# - This playbook assumes that the Docker Swarm cluster is already initialized and functional.
+# - Always test the deployment in a staging environment before applying it to production.
+# - Use `become: true` cautiously and ensure that the user running the playbook has the necessary sudo privileges.
+# - Modular roles like `check_nfs` and `deploy_home_assistant` improve reusability and maintainability across similar deployments.
