--- a/deployments/portainer/group_vars/all.yml
+++ b/deployments/portainer/group_vars/all.yml
@@ -1,4 +1,22 @@
 ---
+# This file contains group variables for the Portainer deployment.
+# It defines secrets and configuration values required for setting up the Portainer service.
+# The secrets are securely stored in Ansible Vault and referenced here for use in playbooks.
+
 secrets:
-  # will be created into docker secrets and used in portainer service
-  portainer_admin_password: "{{ vault_portainer_admin_password }}" # Portainer admin password
+  # The `secrets` dictionary contains sensitive information that will be converted into Docker secrets
+  # and used by the Portainer service during deployment.
+
+  portainer_admin_password: "{{ vault_portainer_admin_password }}"
+  # The admin password for the Portainer service.
+  # This value is securely stored in Ansible Vault and injected at runtime.
+  # Ensure that the `vault_portainer_admin_password` variable is properly defined and encrypted in Ansible Vault.
+
+# Notes:
+# - To edit the encrypted variables, use the following command:
+#   ansible-vault edit group_vars/all.yml
+# - The `portainer_admin_password` will be converted into a Docker secret during deployment.
+#   Docker secrets provide a secure way to manage sensitive data in containerized environments.
+# - Always test changes in a staging environment before applying them to production systems.
+# - Use Ansible Vault to securely manage sensitive data and avoid storing plaintext secrets in this file.
+# - Ensure that the Portainer service is configured to use the Docker secret for the admin password.
