--- a/deployments/portainer/roles/nfs/tasks/main.yml
+++ b/deployments/portainer/roles/nfs/tasks/main.yml
@@ -1,16 +1,31 @@
 ---
+# This task file is responsible for ensuring that the required NFS directory and local directory for Portainer exist.
+# It creates the necessary directory structure with appropriate permissions and ownership.
+
 - name: Create a NFS directory if it does not exist
   ansible.builtin.file:
-    path: /mnt/nfs/docker/portainer_data
-    state: directory
-    mode: '7777'
-    owner: nobody
-    group: nogroup
+    path: /mnt/nfs/docker/portainer_data  # The path to the NFS directory to be created.
+    state: directory  # Ensure the path is a directory. If it does not exist, it will be created.
+    mode: '0777'  # Set the directory permissions to allow full access (read, write, execute) for all users.
+    owner: nobody  # Set the directory owner to `nobody`, a common user for shared resources.
+    group: nogroup  # Set the directory group to `nogroup`, a common group for shared resources.
+  # This task ensures that the NFS directory is available for use by the Portainer service.
+  # The `0777` permissions are very permissive and should be used cautiously, especially in production environments.
 
 - name: Setup Portainer directory
   ansible.builtin.file:
-    path: /home/docker-compose/portainer
-    state: directory
-    mode: '0755'
-    owner: nobody
-    group: nogroup
+    path: /home/docker-compose/portainer  # The path to the local directory to be created.
+    state: directory  # Ensure the path is a directory. If it does not exist, it will be created.
+    mode: '0755'  # Set the directory permissions (read, write, execute for owner; read and execute for others).
+    owner: nobody  # Set the directory owner to `nobody`.
+    group: nogroup  # Set the directory group to `nogroup`.
+  # This task creates the local directory structure required for Portainer deployment.
+  # The `0755` permissions are more restrictive and are suitable for local directories.
+
+# Notes:
+# - The `0777` permissions for the NFS directory are very permissive and allow full access to all users.
+#   Use caution when setting such permissions, especially in production environments.
+# - The `nobody` user and `nogroup` group are commonly used for shared resources in NFS setups.
+#   Ensure that these settings align with your NFS server's configuration.
+# - Always test changes in a staging environment before applying them to production systems.
+# - Ensure that the NFS mount point (`/mnt/nfs/docker`) is already mounted and accessible on the target system.
