--- a/deployments/traefik/deploy.yml
+++ b/deployments/traefik/deploy.yml
@@ -1,7 +1,21 @@
 ---
-- name: Deploy traefik
-  hosts: manager[0]
-  become: true
+# This playbook is responsible for deploying the Traefik stack to the Docker Swarm cluster.
+# It performs the following tasks:
+# 1. Ensures that the required NFS directory structure for Traefik exists and is properly configured.
+# 2. Deploys the Traefik stack using Docker Swarm by leveraging the `deploy_traefik` role.
+
+- name: Deploy Traefik
+  hosts: manager[0]  # Target the first manager node in the `manager` group.
+  become: true  # Execute tasks with elevated privileges (sudo) to ensure proper permissions.
   roles:
-  - check_nfs
-  - deploy_traefik
+    - check_nfs  # Ensures the required NFS directory structure for Traefik exists with the correct permissions.
+    - deploy_traefik  # Handles the deployment of the Traefik stack, including Docker secrets and stack deployment.
+
+# Notes:
+# - Ensure that the `manager` group is properly defined in the Ansible inventory file, with at least one manager node.
+# - The `check_nfs` role should verify and create the necessary NFS directory structure for Traefik.
+# - The `deploy_traefik` role should include tasks to prepare the environment, create Docker secrets, and deploy the stack.
+# - This playbook assumes that the Docker Swarm cluster is already initialized and functional.
+# - Always test the deployment in a staging environment before applying it to production.
+# - Use `become: true` cautiously and ensure that the user running the playbook has the necessary sudo privileges.
+# - Modular roles like `check_nfs` and `deploy_traefik` improve reusability and maintainability across similar deployments.
