--- a/docker-swarm/collections/requirements.yml
+++ b/docker-swarm/collections/requirements.yml
@@ -1,6 +1,24 @@
 ---
+# This file defines the Ansible collections required for the Docker Swarm playbooks.
+# Collections are pre-packaged sets of modules, plugins, and roles that extend Ansible's functionality.
+# These collections are essential for managing Docker Swarm, interacting with Docker, and performing system-level tasks.
+
 collections:
-- name: ansible.utils
-- name: community.general
-- name: ansible.posix
-- name: community.docker.docker_stack
+  # The `ansible.utils` collection provides utility modules and plugins that enhance Ansible's core functionality.
+  # It includes tools for data manipulation, validation, and other general-purpose utilities.
+  - name: ansible.utils
+
+  # The `community.general` collection is a widely-used collection that provides a variety of modules and plugins.
+  # It includes tools for managing files, services, packages, and more across different platforms.
+  # This collection is essential for general system administration tasks.
+  - name: community.general
+
+  # The `ansible.posix` collection provides modules and plugins for managing POSIX-compliant systems.
+  # It includes tools for managing users, groups, file permissions, and other system-level tasks.
+  # This collection is critical for configuring Linux-based systems in the cluster.
+  - name: ansible.posix
+
+  # The `community.docker.docker_stack` collection provides modules for managing Docker and Docker Swarm.
+  # It includes tools for deploying and managing Docker stacks, containers, networks, and volumes.
+  # This collection is essential for orchestrating services in the Docker Swarm cluster.
+  - name: community.docker.docker_stack
