--- a/docker-swarm/roles/setup_nfs_server/tasks/main.yml
+++ b/docker-swarm/roles/setup_nfs_server/tasks/main.yml
@@ -1,30 +1,47 @@
 ---
-- name: install nfs server depenedences
+# This task file is responsible for setting up an NFS (Network File System) server.
+# It installs the necessary dependencies, configures the NFS exports, creates the required directories,
+# and ensures that the NFS server is properly configured and running.
+
+- name: install nfs server dependencies
   apt:
-    name: "{{ item }}"
-    state: present
+    name: "{{ item }}"  # Install the specified NFS-related packages.
+    state: present  # Ensure the packages are installed.
   with_items:
-  - nfs-kernel-server
-  - nfs-common
+  - nfs-kernel-server  # Provides the NFS server functionality.
+  - nfs-common  # Provides the NFS client utilities for mounting NFS shares.
+  # This task ensures that the required NFS packages are installed on the system.
 
 - name: Reload systemd to recognize NFS changes
   ansible.builtin.systemd:
-    daemon_reload: true
+    daemon_reload: true  # Reload the systemd manager configuration.
+  # This task ensures that systemd recognizes any changes made to the NFS configuration.
 
 - name: Create a directory if it does not exist
   ansible.builtin.file:
-    path: /exports/docker
-    state: directory
-    mode: '7777'
-    owner: nobody
-    group: nogroup
+    path: /exports/docker  # The path to the directory to be created.
+    state: directory  # Ensure the path is a directory.
+    mode: '7777'  # Set the directory permissions to allow full access (read, write, execute) for all users.
+    owner: nobody  # Set the directory owner to `nobody`.
+    group: nogroup  # Set the directory group to `nogroup`.
+  # This task ensures that the directory for exporting the NFS volume exists with the correct permissions.
 
 - name: Copy exports file to host
   ansible.builtin.template:
-    src: "templates/exports.j2"
-    dest: "/etc/exports"
-    mode: '7777'
-    owner: nobody
-    group: nogroup
+    src: "templates/exports.j2"  # Path to the Jinja2 template for the NFS exports configuration.
+    dest: "/etc/exports"  # Destination path for the NFS exports configuration file.
+    mode: '7777'  # Set the file permissions to allow full access (read, write, execute) for all users.
+    owner: nobody  # Set the file owner to `nobody`.
+    group: nogroup  # Set the file group to `nogroup`.
   notify:
-  - Restart NFS Server
+  - Restart NFS Server  # Notify the handler to restart the NFS server after the configuration is updated.
+  # This task copies the NFS exports configuration file to the target system and ensures it has the correct permissions.
+
+# Notes:
+# - The `nfs-kernel-server` package is required to provide NFS server functionality.
+# - The `/exports/docker` directory is the location where the NFS share will be exported.
+# - The `templates/exports.j2` file should define the NFS export rules, such as which clients can access the share
+#   and their permissions (e.g., read-only or read-write).
+# - The `notify` directive ensures that the NFS server is restarted after the exports file is updated.
+# - The `7777` permissions on the directory and file are very permissive and should be adjusted based on your security requirements.
+# - Ensure that the NFS server is properly configured to allow access from the intended clients.
